mostly finished landing page

--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,20 @@
     </head>
     <body>
         <div id="phone">
-            <h1>Landing screen</h1>
+            <!-- In here are the phone screen settings -->
+            <div id="home_top">
+                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+            </div>
+            <div id="home_left">
+                this is the homescreen left pannel
+            </div>
+            <div id="home_right">
+                this is the homscreen right pannel
+            </div>
+            <div id="home_bottom">
+                this is the homescreen bottom pannel
+            </div>
+
         </div>
     </body>
     <footer>
