Added back old CSS changes as I needed them still. Having fun with CSS for camera.

--- a/camera.html
+++ b/camera.html
@@ -1,19 +1,30 @@
+<!--
+    Author: Justin Feldmann
+
+-->
+
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hifi prototype</title>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    </head>
-    <body>
 
-        <div class="controls">
-            <div class="cameraview"></div>
-            <span class="record">START</span>
-            <span id="cameralogs">Camera Logs</span>
+<head>
+    <title>Hifi prototype</title>
+
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
+
+<body>
+    <div id="phone-camera">
+        <!-- In here are the phone screen settings -->
+        <div id="home_top">
+            <img src="image/menu.png" alt="Menu Icon" height="100%">
         </div>
+        <span class="record">RECORD</span>
+        <span id="cameralogs">Camera Logs</span>
+    </div>
 
-    </body>
-    <footer>
-        
-    </footer>
+</body>
+<footer>
+
+</footer>
+
 </html>
