Added images and temps, retrieved background image and menu icon

--- a/weather.html
+++ b/weather.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <title>Weather</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         <div id="phone">
-            <h1>Weather</h1>
+            <div id="home_top">
+                <img src="image/menu.png" alt="Menu Icon" height="100%">
+                <h1>Weather</h1>
+            </div>
+            
 
             <h3 id="dotw">Mon    Tue    Wed    Thu    Fri    Sat    Sun   </h3>
+            <div id="dotw_icons">
+                <img src="image/sun.png" alt="Sunny" height="25%">
+                <img src="image/rain.png" alt="Rainy" height="22%">
+                <img src="image/cloud.png" alt="Cloudy" height="20%">
+                <img src="image/sun.png" alt="Sunny" height="25%">
+                <img src="image/sun.png" alt="Sunny" height="25%">
+                <img src="image/sun.png" alt="Sunny" height="25%">
+                <img src="image/rain.png" alt="Rainy" height="25%">
+            </div>
+            <div id="dotw_temps">75    62    69    79    76    82    74</div>
         </div>
 
         <div>
