Camera page nearly finished, from my viewpoint. Starting work on Camera Logs.

--- a/camera.html
+++ b/camera.html
@@ -17,9 +17,11 @@
         <!-- In here are the phone screen settings -->
         <div id="home_top">
             <img src="image/menu.png" alt="Menu Icon" height="100%">
+            
+            <a href="#" class="cameralogbtn">Camera Logs</a>
+            <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
-        <span class="record">RECORD</span>
-        <span id="cameralogs">Camera Logs</span>
+        <a href="#" class="record">RECORD</a>
     </div>
 
 </body>
