Set alignment of thumbnails for camera logs.

--- a/camera-logs.html
+++ b/camera-logs.html
@@ -12,7 +12,24 @@
     </head>
     <body>
         <div id="phone">
-            <h1>Landing screen</h1>
+            <div id="home_top">
+                <img src="image/menu.png" alt="Menu Icon" height="100%">
+                <div id="first-row">
+                        <div class="camera-snap">testing yo</div>
+                        <div class="camera-snap">testing yo</div>
+                        <div class="camera-snap">testing yo</div>
+                </div>
+                <div id="second-row">
+                        <div class="camera-snap">testing yo</div>
+                        <div class="camera-snap">testing yo</div>
+                        <div class="camera-snap">testing yo</div>
+                </div>
+                <div id="third-row">
+                        <div class="camera-snap">testing yo</div>
+                        <div class="camera-snap">testing yo</div>
+                        <div class="camera-snap">testing yo</div>
+                </div>
+            </div>
         </div>
     </body>
     <footer>
