Nearly finished with Camera Logs

--- a/camera-logs.html
+++ b/camera-logs.html
@@ -15,19 +15,19 @@
             <div id="home_top">
                 <img src="image/menu.png" alt="Menu Icon" height="100%">
                 <div id="first-row">
-                        <div class="camera-snap">testing yo</div>
-                        <div class="camera-snap">testing yo</div>
-                        <div class="camera-snap">testing yo</div>
+                    <div class="camera-snap"><img src="image/cameralog1.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
+                    <div class="camera-snap"><img src="image/cameralog2.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
+                    <div class="camera-snap"><img src="image/cameralog3.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
                 </div>
                 <div id="second-row">
-                        <div class="camera-snap">testing yo</div>
-                        <div class="camera-snap">testing yo</div>
-                        <div class="camera-snap">testing yo</div>
+                    <div class="camera-snap"><img src="image/cameralog4.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
+                    <div class="camera-snap"><img src="image/cameralog5.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
+                    <div class="camera-snap"><img src="image/cameralog6.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
                 </div>
                 <div id="third-row">
-                        <div class="camera-snap">testing yo</div>
-                        <div class="camera-snap">testing yo</div>
-                        <div class="camera-snap">testing yo</div>
+                    <div class="camera-snap"><img src="image/cameralog7.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
+                    <div class="camera-snap"><img src="image/cameralog8.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
+                    <div class="camera-snap"><img src="image/cameralog9.jpg" class="cam-thumbnail" alt="dashcam footage"></div>
                 </div>
             </div>
         </div>
