--- a/landingMenu.html
+++ b/landingMenu.html
@@ -6,57 +6,81 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <a href="landing.html">
+
         <div id="phone">
             <!-- In here are the phone screen settings -->
             <!-- this is the menu -->
+            <!-- each of these boxes needs linked to their own page -->
             <div id="menu_button">
-                    <div id="menu_box_1">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_2">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_3">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_4">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_5">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_6">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_7">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_8">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_9">
-                        Link to Page
-                    </div>
-                    <div id="menu_box_10">
-                        Link to Page
-                    </div>
+                    <a href="">
+                        <div id="menu_box_1">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_2">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_3">
+                         Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_4">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_5">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_6">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_7">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_8">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_9">
+                            Link to Page
+                        </div>
+                    </a>
+                    <a href="">
+                        <div id="menu_box_10">
+                            Link to Page
+                        </div>
+                    </a>
             </div>
-            <div id="home_top">
+            <!-- the rest of the page goes here. -->
+            <!-- change hyperlink back to whatever page this is. Not the menu! -->
+            <a href="landing.html">
+                <div id="home_top">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
-            </div>
-            <div id="home_left">
-                this is the homescreen left pannel
-            </div>
-            <div id="home_right">
-                this is the homscreen right pannel
-            </div>
-            <div id="home_bottom">
-                this is the homescreen bottom pannel
-            </div>
-
+                </div>
+                <div id="home_left">
+                    this is the homescreen left pannel
+                </div>
+                <div id="home_right">
+                    this is the homscreen right pannel
+                </div>
+                <div id="home_bottom">
+                    this is the homescreen bottom pannel
+                </div>
+            </a>
         </div>
-    </a>
+
     </body>
     <footer>
 
