changed menu link color

--- a/landingMenu.html
+++ b/landingMenu.html
@@ -12,52 +12,52 @@
             <!-- this is the menu -->
             <!-- each of these boxes needs linked to their own page -->
             <div id="menu_button">
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_1">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_2">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_3">
                          Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_4">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_5">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_6">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_7">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_8">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_9">
                             Link to Page
                         </div>
                     </a>
-                    <a href="">
+                    <a class="menu" href="">
                         <div id="menu_box_10">
                             Link to Page
                         </div>
