Re-sized hamburger menu tabs, added missing tabs, and changed font/font size.

--- a/landingMenu.html
+++ b/landingMenu.html
@@ -14,52 +14,72 @@
             <div id="menu_button">
                     <a class="menu" href="">
                         <div id="menu_box_1">
-                            Link to Page
+                            Camera
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_2">
-                            Link to Page
+                            Camera Logs
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_3">
-                         Link to Page
+                         Diagnostics
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_4">
-                            Link to Page
+                            Facial Recognition
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_5">
-                            Link to Page
+                            Radio
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_6">
-                            Link to Page
+                            CD
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_7">
-                            Link to Page
+                            Maps
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_8">
-                            Link to Page
+                            Traffic Alerts
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_9">
-                            Link to Page
+                            New Driver
                         </div>
                     </a>
                     <a class="menu" href="">
                         <div id="menu_box_10">
-                            Link to Page
+                            HVAC & Seats
+                        </div>
+                    </a>
+                    <a class="menu" href="">
+                        <div id="menu_box_11">
+                            Weather
+                        </div>
+                    </a>
+                    <a class="menu" href="">
+                        <div id="menu_box_12">
+                            Gesture & Voice
+                        </div>
+                    </a>
+                    <a class="menu" href="">
+                        <div id="menu_box_13">
+                            Driver Mode
+                        </div>
+                    </a>
+                    <a class="menu" href="">
+                        <div id="menu_box_14">
+                            Fleet
                         </div>
                     </a>
             </div>
