--- a/landing.html
+++ b/landing.html
@@ -15,13 +15,14 @@
                 </a>
             </div>
             <div id="home_left">
-                this is the homescreen left pannel
+                <img src="image/map.png" width="100%">
             </div>
             <div id="home_right">
-                this is the homscreen right pannel
+                <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
             </div>
-            <div id="home_bottom">
-                this is the homescreen bottom pannel
+            <div id="home_bottom" >
+                <img src="image/radio.png" height="90%" style="padding-right:1.5%";>
+                <img src="image/radioOptions.png" height="90%" >
             </div>
 
         </div>
