added customize to menu options created and added maps and mapsmenu

--- a/landing.html
+++ b/landing.html
@@ -9,13 +9,15 @@
         <div id="phone">
             <!-- In here are the phone screen settings -->
 
-            <div id="home_top">
+            <div id="menu">
                 <a href="landingMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
             </div>
             <div id="home_left">
-                <img src="image/map.png" width="100%">
+                <a href="maps.html">
+                    <img src="image/map.png" width="100%">
+                </a>
             </div>
             <div id="home_right">
                 <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
@@ -24,7 +26,6 @@
                 <img src="image/radio.png" height="90%" style="padding-right:1.5%";>
                 <img src="image/radioOptions.png" height="90%" >
             </div>
-
         </div>
     </body>
     <footer>
