--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-
         <div id="phone">
             <!-- In here are the phone screen settings -->
             <!-- this is the menu -->
@@ -88,25 +87,20 @@
                         <img src="image/customizeBar.png" width="50%">
                     </a>
             </div>
-            <!-- the rest of the page goes here. -->
-            <!-- change hyperlink back to whatever page this is. Not the menu! -->
-            <a href="landing.html">
-                <div id="menu">
+            <div id="menu">
+                <a href="maps.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
-                </div>
-                <div id="home_left">
-                    <img src="image/map.png" width="100%">
-                </div>
-                <div id="home_right">
-                    <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
-                </div>
-                <div id="home_bottom">
-                    <img src="image/radio.png" height="90%" style="padding-right:1.5%;">
-                    <img src="image/radioOptions.png" height="90%" >
-                </div>
+                </a>
+            </div>
+            <a href="maps.html">
+                <img src="image/directions.png"  height="100%">
+                <img src="image/map.png"  height="100%" style="position:absolute; right:0%;
+                                                                top:10%; height:90%;
+                                                                overflow:hidden;
+                                                                background-size: cover;
+                                                                background-position: center;">
             </a>
         </div>
-
     </body>
     <footer>
 
