--- a/radio.html
+++ b/radio.html
@@ -10,7 +10,7 @@
             <!-- In here are the phone screen settings -->
 
             <div id="menu">
-                <a href="mapsMenu.html">
+                <a href="radioMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
@@ -19,12 +19,14 @@
                         </div>
                     </a>
             </div>
-            <img src="image/directions.png"  height="100%">
-            <img src="image/map.png"  height="100%" style="position:absolute; right:0%;
-                                                            top:10%; height:90%;
-                                                            overflow:hidden;
-                                                            background-size: cover;
-                                                            background-position: center;">
+            <div id="radio_main">
+                <img src="image/radio.png" width="70%" style="padding-right:1.5%";>
+                <img src="image/presets.png" width="70%" style="padding-right:1.5%";>
+                
+            </div>
+            <div id="home_bottom" >
+                <img src="image/volume.png" width="90%" style="padding-right:1.5%; margin-left: 5%;">
+            </div>
         </div>
     </body>
     <footer>
