--- a/landing.html
+++ b/landing.html
@@ -13,6 +13,11 @@
                 <a href="landingMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                    </a>
             </div>
             <div id="home_left">
                 <a href="maps.html">
@@ -23,8 +28,10 @@
                 <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
             </div>
             <div id="home_bottom" >
-                <img src="image/radio.png" height="90%" style="padding-right:1.5%";>
-                <img src="image/radioOptions.png" height="90%" >
+                <a href="radio.html">
+                    <img src="image/radio.png" height="90%" style="padding-right:1.5%";>
+                    <img src="image/radioOptions.png" height="90%" >
+                </a>
             </div>
         </div>
     </body>
