added CD and CD menu. changed other menus to include CD link

--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -36,7 +36,7 @@
                             Radio
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="cd.html">
                         <div id="menu_box_6">
                             CD
                         </div>
