--- a/cdMenu.html
+++ b/cdMenu.html
@@ -6,11 +6,8 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-
         <div id="phone">
             <!-- In here are the phone screen settings -->
-            <!-- this is the menu -->
-            <!-- each of these boxes needs linked to their own page -->
             <div id="menu_button">
                     <a class="menu" href="">
                         <div id="menu_box_1">
@@ -42,7 +39,7 @@
                             CD
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="maps.html">
                         <div id="menu_box_7">
                             Maps
                         </div>
@@ -88,30 +85,26 @@
                         <img src="image/customizeBar.png" width="50%">
                     </a>
             </div>
-            <!-- the rest of the page goes here. -->
-            <!-- change hyperlink back to whatever page this is. Not the menu! -->
-            <a href="landing.html">
-                <div id="menu">
+            <!-- phone options -->
+            <div id="menu">
+                <a href="cd.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
-                    <a class="menu" href="landing.html">
-                            <div id="homeMenu">
-                                Home
-                            </div>
-                        </a>
-                </div>
-                <div id="home_left">
-                    <img src="image/map.png" width="100%">
-                </div>
-                <div id="home_right">
-                    <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
-                </div>
-                <div id="home_bottom">
-                    <img src="image/radio.png" height="90%" style="padding-right:1.5%;">
-                    <img src="image/radioOptions.png" height="90%" >
-                </div>
-            </a>
+                </a>
+                <a class="menu" href="landing.html">
+                    <div id="homeMenu">
+                        Home
+                    </div>
+                </a>
+            </div>
+            <div id="radio_main">
+                    <img src="image/cd_track.png" height="50%" style="padding-right:1.5%";>
+                    <img src="image/playpause.png" width="100%" style="padding-right:1.5%;";>
+                
+            </div>
+            <div id="home_bottom" >
+                <img src="image/volume.png" width="90%" style="padding-right:1.5%; margin-left: 5%;">
+            </div>
         </div>
-
     </body>
     <footer>
 
