--- a/radioMenu.html
+++ b/radioMenu.html
@@ -34,7 +34,7 @@
                             Radio
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="cd.html">
                         <div id="menu_box_6">
                             CD
                         </div>
