--- a/cdMenu.html
+++ b/cdMenu.html
@@ -49,7 +49,7 @@
                             Traffic Alerts
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="newDriver.html">
                         <div id="menu_box_9">
                             New Driver
                         </div>
@@ -96,7 +96,8 @@
                     </div>
                 </a>
             </div>
-            <div id="radio_main">
+            <a href="cd.html">
+                <div id="radio_main">
                     <img src="image/cd_track.png" height="50%" style="padding-right:1.5%";>
                     <img src="image/playpause.png" width="100%" style="padding-right:1.5%;";>
                 
@@ -104,6 +105,7 @@
             <div id="home_bottom" >
                 <img src="image/volume.png" width="90%" style="padding-right:1.5%; margin-left: 5%;">
             </div>
+            </a>
         </div>
     </body>
     <footer>
