--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -41,7 +41,7 @@
                             CD
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="maps.html">
                         <div id="menu_box_7">
                             Maps
                         </div>
@@ -51,7 +51,7 @@
                             Traffic Alerts
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="newDriver.html">
                         <div id="menu_box_9">
                             New Driver
                         </div>
