--- a/newDriverMenu.html
+++ b/newDriverMenu.html
@@ -87,7 +87,7 @@
             </div>
             <!-- phone options -->
             <div id="menu">
-                <a href="radio.html">
+                <a href="newdriver.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
@@ -96,16 +96,23 @@
                     </div>
                 </a>
             </div>
-            <a href="radio.html">
-                <div id="radio_main">
-                <img src="image/radio.png" width="70%" style="padding-right:1.5%";>
-                <img src="image/presets.png" width="70%" style="padding-right:1.5%";>
-                
-            </div>
-            <div id="home_bottom" >
-                <img src="image/volume.png" width="90%" style="padding-right:1.5%; margin-left: 5%;">
-            </div>
-            </a>
+            <a href="newDriver.html">
+                <div id="newDriver_topLeft">
+                    Road Rules
+                </div>
+                <div id="newDriver_topRight">
+                    Signs
+                    </br>
+                    <img src="image/signs.png"  height="80%">
+                </div>
+                <div id="newDriver_botLeft">
+                    <p>Vehicle #001</p>
+                    <p> Number: ZS1 F20</p>
+                </div>
+                <div id="newDriver_botRight">
+                    What to do if you get pulled over
+                </div>
+                </a>
         </div>
     </body>
     <footer>
