--- a/signsMenu.html
+++ b/signsMenu.html
@@ -85,27 +85,41 @@
                         <img src="image/customizeBar.png" width="50%">
                     </a>
             </div>
-            <!-- phone options -->
+
             <div id="menu">
-                <a href="radio.html">
+                <a href="signs.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
-                    <div id="homeMenu">
-                        Home
-                    </div>
-                </a>
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                    </a>
             </div>
-            <a href="radio.html">
-                <div id="radio_main">
-                <img src="image/radio.png" width="70%" style="padding-right:1.5%";>
-                <img src="image/presets.png" width="70%" style="padding-right:1.5%";>
-                
+
+            <!-- In here are the phone screen settings -->
+            <!-- this is the quadrents for the new driver -->
+            <a href="signs.html">
+                <div>
+                <p>
+                    What to do if you get pulled over.
+                </p>
+                </br>
+                <p class="newDriver">
+                    If you get pulled over, follow these steps.
+                </p>
+                <ol class="newDriver">
+                    <li>Don't Panic</li>
+                    <li>Remain Calm</li>
+                    <li>Wait for the officer to approach your vehicle</li>
+                    <li>Listen to the officer’s instructions</li>
+                    <li>You will likely be asked to produce your license and registration</li>
+                    <li>Wait while the officer files his paperwork</li>
+                    <li>Drive Carefully</li>
+                    <li>Thank the officer for doing their job</li>
+                </ol>
             </div>
-            <div id="home_bottom" >
-                <img src="image/volume.png" width="90%" style="padding-right:1.5%; margin-left: 5%;">
-            </div>
-            </a>
+        </a>
         </div>
     </body>
     <footer>
