Added links on menu, added diag, weathMenu

--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -21,7 +21,7 @@
                             Camera Logs
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="diagnostics.html">
                         <div id="menu_box_3">
                          Diagnostics
                         </div>
@@ -61,7 +61,7 @@
                             HVAC & Seats
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="weather.html">
                         <div id="menu_box_11">
                             Weather
                         </div>
