--- a/weather.html
+++ b/weather.html
@@ -6,13 +6,19 @@
     </head>
     <body>
         <div id="phone">
-            <div id="home_top">
-                <img src="image/menu.png" alt="Menu Icon" height="100%">
-                <h1>Weather</h1>
+            <div id="menu">
+                <a href="weatherMenu.html">
+                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                </a>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                    </a>
             </div>
             
 
-            <h3 id="dotw">Mon    Tue    Wed    Thu    Fri    Sat    Sun   </h3>
+            <div id="dotw">Mon    Tue    Wed    Thu    Fri    Sat    Sun   </div>
             <div id="dotw_icons">
                 <img src="image/sun.png" alt="Sunny" height="25%">
                 <img src="image/rain.png" alt="Rainy" height="22%">
