--- a/radioMenu.html
+++ b/radioMenu.html
@@ -19,7 +19,7 @@
                             Camera Logs
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="diagnostics.html">
                         <div id="menu_box_3">
                          Diagnostics
                         </div>
@@ -59,7 +59,7 @@
                             HVAC & Seats
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="weather.html">
                         <div id="menu_box_11">
                             Weather
                         </div>
