In the middle of adding menus to each of my pages

--- a/camera-logsMenu.html
+++ b/camera-logsMenu.html
@@ -12,12 +12,82 @@
     </head>
     <body>
         <div id="phone">
-            <div id="home_top">
-                    <label id="cameralogs-pagelabel">Camera Logs</label>
-                <a href="camera-logsMenu.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+            
+            <div id="menu_button">
+                <a class="menu" href="camera.html">
+                    <div id="menu_box_1">
+                        Camera
+                    </div>
                 </a>
-                
+                <a class="menu" href="camera-logs.html">
+                    <div id="menu_box_2">
+                        Camera Logs
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_3">
+                     Diagnostics
+                    </div>
+                </a>
+                <a class="menu" href="face-recognition.html">
+                    <div id="menu_box_4">
+                        Facial Recognition
+                    </div>
+                </a>
+                <a class="menu" href="radio.html">
+                    <div id="menu_box_5">
+                        Radio
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_6">
+                        CD
+                    </div>
+                </a>
+                <a class="menu" href="maps.html">
+                    <div id="menu_box_7">
+                        Maps
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_8">
+                        Traffic Alerts
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_9">
+                        New Driver
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_10">
+                        HVAC & Seats
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_11">
+                        Weather
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_12">
+                        Gesture & Voice
+                    </div>
+                </a>
+                <a class="menu" href="">
+                    <div id="menu_box_13">
+                        Driver Mode
+                    </div>
+                </a>
+                <a class="menu" href="fleet-diags.html">
+                    <div id="menu_box_14">
+                        Fleet
+                    </div>
+                </a>
+            </div>
+            <div id="home_top">
+                <img src="image/menu.png" alt="Menu Icon" height="100%">
+                <label id="cameralogs-pagelabel">Camera Logs</label>
                 <div id="first-row">
                     <div class="camera-snap">
                         <img src="image/cameralog1.jpg" class="cam-thumbnail" alt="dashcam footage">
