--- a/camera.html
+++ b/camera.html
@@ -16,9 +16,10 @@
     <div id="phone-camera">
         <!-- In here are the phone screen settings -->
         <div id="home_top">
-            <img src="image/menu.png" alt="Menu Icon" height="100%">
-            
-            <a href="#" class="cameralogbtn">Camera Logs</a>
+            <a href="cameraMenu.html">
+                <img src="image/menu.png" alt="Menu Icon" height="100%">
+            </a>
+            <a href="camera-logs.html" class="cameralogbtn">Camera Logs</a>
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
         <a href="#" class="record">RECORD</a>
