--- a/face-recognition.html
+++ b/face-recognition.html
@@ -16,8 +16,9 @@
     <div id="phone-facerecognition">
         <!-- In here are the phone screen settings -->
         <div id="home_top">
-            <img src="image/menu.png" alt="Menu Icon" height="100%">
-            
+            <a href="face-recognitionMenu.html">
+                <img src="image/menu.png" alt="Menu Icon" height="100%">
+            </a>
             <!-- <a href="#" class="cameralogbtn">Camera Logs</a> -->
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
