--- a/landingMenu.html
+++ b/landingMenu.html
@@ -12,12 +12,12 @@
             <!-- this is the menu -->
             <!-- each of these boxes needs linked to their own page -->
             <div id="menu_button">
-                    <a class="menu" href="">
+                    <a class="menu" href="camera.html">
                         <div id="menu_box_1">
                             Camera
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="camera-logs.html">
                         <div id="menu_box_2">
                             Camera Logs
                         </div>
@@ -27,7 +27,7 @@
                          Diagnostics
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="face-recognition.html">
                         <div id="menu_box_4">
                             Facial Recognition
                         </div>
@@ -77,7 +77,7 @@
                             Driver Mode
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="fleet-diags.html">
                         <div id="menu_box_14">
                             Fleet
                         </div>
