--- a/cdMenu.html
+++ b/cdMenu.html
@@ -95,6 +95,9 @@
                         Home
                     </div>
                 </a>
+                <div id="Nav">
+                        CD
+                </div>
             </div>
             <a href="cd.html">
                 <div id="radio_main">
