--- a/landing.html
+++ b/landing.html
@@ -18,6 +18,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            New Driver
+                    </div>
             </div>
             <div id="home_left">
                 <a href="maps.html">
