--- a/maps.html
+++ b/maps.html
@@ -18,6 +18,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            New Driver
+                    </div>
             </div>
             <img src="image/directions.png"  height="100%">
             <img src="image/map.png"  height="100%" style="position:absolute; right:0%;
