--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -96,6 +96,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            New Driver
+                    </div>
             </div>
             <a href="maps.html">
                 <img src="image/directions.png"  height="100%">
