--- a/newDriver.html
+++ b/newDriver.html
@@ -18,6 +18,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            New Driver
+                    </div>
             </div>
             <!-- In here are the phone screen settings -->
             <!-- this is the quadrents for the new driver -->
