--- a/newDriverMenu.html
+++ b/newDriverMenu.html
@@ -95,6 +95,9 @@
                         Home
                     </div>
                 </a>
+                <div id="Nav">
+                        New Driver
+                </div>
             </div>
             <a href="newDriver.html">
                 <div id="newDriver_topLeft">
