--- a/signs.html
+++ b/signs.html
@@ -14,10 +14,13 @@
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
-                        <div id="homeMenu">
+                    <div id="homeMenu">
                             Home
-                        </div>
-                    </a>
+                    </div>
+                </a>
+                <div id="Nav">
+                        Signs
+                </div>
             </div>
             <!-- In here are the phone screen settings -->
             <!-- this is the quadrents for the new driver -->
