--- a/signsMenu.html
+++ b/signsMenu.html
@@ -95,6 +95,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            Signs
+                    </div>
             </div>
 
             <!-- In here are the phone screen settings -->
