--- a/weather.html
+++ b/weather.html
@@ -15,6 +15,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            Weather
+                    </div>
             </div>
             
 
