--- a/weatherMenu.html
+++ b/weatherMenu.html
@@ -92,6 +92,9 @@
                     Home
                 </div>
             </a>
+            <div id="Nav">
+                    Weather
+            </div>
         </div>
 
             <div id="dotw">Mon    Tue    Wed    Thu    Fri    Sat    Sun   </div>
