--- a/cd.html
+++ b/cd.html
@@ -18,6 +18,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            CD
+                    </div>
             </div>
             <div id="radio_main">
                 <img src="image/cd_track.png" height="50%" style="padding-right:1.5%";>
