--- a/maps.html
+++ b/maps.html
@@ -19,7 +19,7 @@
                         </div>
                     </a>
                     <div id="Nav">
-                            New Driver
+                            Maps
                     </div>
             </div>
             <img src="image/directions.png"  height="100%">
