--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -97,7 +97,7 @@
                         </div>
                     </a>
                     <div id="Nav">
-                            New Driver
+                            Maps
                     </div>
             </div>
             <a href="maps.html">
