--- a/signsMenu.html
+++ b/signsMenu.html
@@ -59,7 +59,7 @@
                             HVAC & Seats
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="weather.html">
                         <div id="menu_box_11">
                             Weather
                         </div>
