Re-added top nav bar, menu btns fixed now. Added drop-downs for each feature page I made. Added face detection square to Facial Recognition feature.

--- a/camera-logs.html
+++ b/camera-logs.html
@@ -12,11 +12,11 @@
     </head>
     <body>
         <div id="phone">
-            <div id="home_top">
-                    <label id="cameralogs-pagelabel">Camera Logs</label>
+            <div id="menu">
                 <a href="camera-logsMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
+                <label id="pagelabel">Camera Logs</label>
                 
                 <div id="first-row">
                     <div class="camera-snap">
