--- a/cameraMenu.html
+++ b/cameraMenu.html
@@ -15,12 +15,12 @@
 <body>
     <div id="phone-camera">
         <div id="menu_button">
-                <a class="menu" href="">
+                <a class="menu" href="camera.html">
                     <div id="menu_box_1">
                         Camera
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="camera-logs.html">
                     <div id="menu_box_2">
                         Camera Logs
                     </div>
@@ -30,7 +30,7 @@
                         Diagnostics
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="face-recognition.html">
                     <div id="menu_box_4">
                         Facial Recognition
                     </div>
@@ -80,17 +80,18 @@
                         Driver Mode
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="fleet-diags.html">
                     <div id="menu_box_14">
                         Fleet
                     </div>
                 </a>
         </div>
         <!-- In here are the phone screen settings -->
-        <div id="home_top">
+        <div id="menu">
             <a href="camera.html">
                 <img src="image/menu.png" alt="Menu Icon" height="100%">
             </a>
+            <label id="pagelabel">Camera</label>
             <a href="camera-logs.html" class="cameralogbtn">Camera Logs</a>
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
