--- a/camera-logsMenu.html
+++ b/camera-logsMenu.html
@@ -85,9 +85,11 @@
                     </div>
                 </a>
             </div>
-            <div id="home_top">
-                <img src="image/menu.png" alt="Menu Icon" height="100%">
-                <label id="cameralogs-pagelabel">Camera Logs</label>
+            <div id="menu">
+                <a href="camera-logs.html">
+                        <img src="image/menu.png" alt="Menu Icon" height="100%">
+                </a>
+                <label id="pagelabel">Camera Logs</label>
                 <div id="first-row">
                     <div class="camera-snap">
                         <img src="image/cameralog1.jpg" class="cam-thumbnail" alt="dashcam footage">
