--- a/camera.html
+++ b/camera.html
@@ -15,10 +15,11 @@
 <body>
     <div id="phone-camera">
         <!-- In here are the phone screen settings -->
-        <div id="home_top">
+        <div id="menu">
             <a href="cameraMenu.html">
                 <img src="image/menu.png" alt="Menu Icon" height="100%">
             </a>
+            <label id="pagelabel">Camera</label>
             <a href="camera-logs.html" class="cameralogbtn">Camera Logs</a>
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
