--- a/face-recognition.html
+++ b/face-recognition.html
@@ -15,13 +15,15 @@
 <body>
     <div id="phone-facerecognition">
         <!-- In here are the phone screen settings -->
-        <div id="home_top">
+        <div id="menu">
             <a href="face-recognitionMenu.html">
                 <img src="image/menu.png" alt="Menu Icon" height="100%">
             </a>
+            <label id="pagelabel">Facial Recognition</label>
             <!-- <a href="#" class="cameralogbtn">Camera Logs</a> -->
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
+        <div id="detect-square"></div>
         <a href="#" class="record">RECORD</a>
     </div>
 
