--- a/face-recognitionMenu.html
+++ b/face-recognitionMenu.html
@@ -16,12 +16,12 @@
     <div id="phone-facerecognition">
         <!-- In here are the phone screen settings -->
         <div id="menu_button">
-                <a class="menu" href="">
+                <a class="menu" href="camera.html">
                     <div id="menu_box_1">
                         Camera
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="camera-logs.html">
                     <div id="menu_box_2">
                         Camera Logs
                     </div>
@@ -31,7 +31,7 @@
                         Diagnostics
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="face-recognition.html">
                     <div id="menu_box_4">
                         Facial Recognition
                     </div>
@@ -81,19 +81,21 @@
                         Driver Mode
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="fleet-diags.html">
                     <div id="menu_box_14">
                         Fleet
                     </div>
                 </a>
         </div>
-        <div id="home_top">
+        <div id="menu">
             <a href="face-recognition.html">
                 <img src="image/menu.png" alt="Menu Icon" height="100%">
             </a>
+            <label id="pagelabel">Facial Recognition</label>
             <!-- <a href="#" class="cameralogbtn">Camera Logs</a> -->
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
+        <div id="detect-square"></div>
         <a href="#" class="record">RECORD</a>
     </div>
 
