--- a/fleet-diags.html
+++ b/fleet-diags.html
@@ -16,25 +16,32 @@
     <div id="phone">
         <div id="fleet-diags">
             <!-- In here are the phone screen settings -->
-            <div id="home_top">
-                <img src="image/menu.png" alt="Menu Icon" height="100%">
+            <div id="menu">
+                <a href="fleet-diagsMenu.html">
+                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                </a>
+                <label id="pagelabel">Fleet</label>
                 <!-- <span id="cameralogs">Camera Logs</span> -->
             </div>
             <div id="top-left-diag">
-                <strong>VEHICLE #001<br>
-                    LICENSE GH9 76T</strong>
+                <a href="">
+                    <strong>VEHICLE #001<br> LICENSE GH9 76T</strong>
+                </a>
             </div>
             <div id="top-right-diag">
-                <strong>VEHICLE #002<br>
-                    LICENSE 8Z8 1MQ</strong>
+                <a href="">
+                    <strong>VEHICLE #002<br> LICENSE 8Z8 1MQ</strong>
+                </a>
             </div>
             <div id="bottom-left-diag">
-                <strong>VEHICLE #003<br>
-                    LICENSE ZS1 F20</strong>
+                <a href="">
+                    <strong>VEHICLE #003<br> LICENSE ZS1 F20</strong>
+                </a>
             </div>
             <div id="bottom-right-diag">
-                <strong>VEHICLE #004<br>
-                    LICENSE 78U YL5</strong>
+                <a href="">
+                    <strong>VEHICLE #004<br> LICENSE 78U YL5</strong>
+                </a>
             </div>
         </div>
     </div>
