Added customize bar to drop down, added current page label, and added home link for consistency across other pages

--- a/camera-logs.html
+++ b/camera-logs.html
@@ -16,7 +16,14 @@
                 <a href="camera-logsMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
-                <label id="pagelabel">Camera Logs</label>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                </a>
+                <div id="Nav">
+                        Camera Logs
+                </div>
                 
                 <div id="first-row">
                     <div class="camera-snap">
