--- a/camera-logsMenu.html
+++ b/camera-logsMenu.html
@@ -85,11 +85,23 @@
                     </div>
                 </a>
             </div>
+            <div id="customizeBar">
+                <a href="">
+                    <img src="image/customizeBar.png" width="50%">
+                </a>
+            </div>
             <div id="menu">
                 <a href="camera-logs.html">
-                        <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
-                <label id="pagelabel">Camera Logs</label>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                </a>
+                <div id="Nav">
+                        Camera Logs
+                </div>
                 <div id="first-row">
                     <div class="camera-snap">
                         <img src="image/cameralog1.jpg" class="cam-thumbnail" alt="dashcam footage">
