--- a/cameraMenu.html
+++ b/cameraMenu.html
@@ -86,14 +86,25 @@
                     </div>
                 </a>
         </div>
+        <div id="customizeBar">
+            <a href="">
+                <img src="image/customizeBar.png" width="50%">
+            </a>
+        </div>
         <!-- In here are the phone screen settings -->
         <div id="menu">
             <a href="camera.html">
                 <img src="image/menu.png" alt="Menu Icon" height="100%">
             </a>
-            <label id="pagelabel">Camera</label>
+            <a class="menu" href="landing.html">
+                    <div id="homeMenu">
+                        Home
+                    </div>
+            </a>
+            <div id="Nav">
+                    Camera
+            </div>
             <a href="camera-logs.html" class="cameralogbtn">Camera Logs</a>
-            <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
         <a href="#" class="record">RECORD</a>
     </div>
