--- a/face-recognitionMenu.html
+++ b/face-recognitionMenu.html
@@ -87,11 +87,23 @@
                     </div>
                 </a>
         </div>
+        <div id="customizeBar">
+            <a href="">
+                <img src="image/customizeBar.png" width="50%">
+            </a>
+        </div>
         <div id="menu">
             <a href="face-recognition.html">
-                <img src="image/menu.png" alt="Menu Icon" height="100%">
-            </a>
-            <label id="pagelabel">Facial Recognition</label>
+                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                </a>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                </a>
+                <div id="Nav" style="font-size: 2rem;">
+                        Facial Recognition
+                </div>
             <!-- <a href="#" class="cameralogbtn">Camera Logs</a> -->
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
