--- a/fleet-diags.html
+++ b/fleet-diags.html
@@ -20,7 +20,14 @@
                 <a href="fleet-diagsMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
-                <label id="pagelabel">Fleet</label>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                </a>
+                <div id="Nav">
+                        Fleet
+                </div>
                 <!-- <span id="cameralogs">Camera Logs</span> -->
             </div>
             <div id="top-left-diag">
