--- a/fleet-diagsMenu.html
+++ b/fleet-diagsMenu.html
@@ -17,12 +17,12 @@
         <div id="fleet-diags">
             <!-- In here are the phone screen settings -->
             <div id="menu_button">
-                    <a class="menu" href="">
+                    <a class="menu" href="camera.html">
                         <div id="menu_box_1">
                             Camera
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="camera-logs.html">
                         <div id="menu_box_2">
                             Camera Logs
                         </div>
@@ -32,7 +32,7 @@
                             Diagnostics
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="face-recognition.html">
                         <div id="menu_box_4">
                             Facial Recognition
                         </div>
@@ -82,17 +82,29 @@
                             Driver Mode
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="fleet-diags.html">
                         <div id="menu_box_14">
                             Fleet
                         </div>
                     </a>
             </div>
-            <div id="menu">
-                <a href="fleet-diags.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+            <div id="customizeBar">
+                <a href="">
+                    <img src="image/customizeBar.png" width="50%">
                 </a>
-                <label id="pagelabel">Fleet</label>
+            </div>
+            <div id="menu">
+                    <a href="fleet-diags.html">
+                            <img src="image/menu.png" alt="Menu Icon" height="100%">
+                        </a>
+                        <a class="menu" href="landing.html">
+                                <div id="homeMenu">
+                                    Home
+                                </div>
+                        </a>
+                        <div id="Nav">
+                                Fleet
+                        </div>
                 <!-- <span id="cameralogs">Camera Logs</span> -->
             </div>
             <div id="top-left-diag">
