--- a/camera.html
+++ b/camera.html
@@ -19,11 +19,18 @@
             <a href="cameraMenu.html">
                 <img src="image/menu.png" alt="Menu Icon" height="100%">
             </a>
-            <label id="pagelabel">Camera</label>
+            <a class="menu" href="landing.html">
+                    <div id="homeMenu">
+                        Home
+                    </div>
+            </a>
+            <div id="Nav">
+                    Camera
+            </div>
             <a href="camera-logs.html" class="cameralogbtn">Camera Logs</a>
-            <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
-        <a href="#" class="record">RECORD</a>
+        
+    <a href="#" class="record">RECORD</a>
     </div>
 
 </body>
