--- a/face-recognition.html
+++ b/face-recognition.html
@@ -17,9 +17,16 @@
         <!-- In here are the phone screen settings -->
         <div id="menu">
             <a href="face-recognitionMenu.html">
-                <img src="image/menu.png" alt="Menu Icon" height="100%">
-            </a>
-            <label id="pagelabel">Facial Recognition</label>
+                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                </a>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                </a>
+                <div id="Nav" style="font-size: 2rem;">
+                        Facial Recognition
+                </div>
             <!-- <a href="#" class="cameralogbtn">Camera Logs</a> -->
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
