Added more links in drop-down menu for all pages created so far

--- a/cameraMenu.html
+++ b/cameraMenu.html
@@ -40,7 +40,7 @@
                         Radio
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="cd.html">
                     <div id="menu_box_6">
                         CD
                     </div>
@@ -55,7 +55,7 @@
                         Traffic Alerts
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="newDriver.html">
                     <div id="menu_box_9">
                         New Driver
                     </div>
@@ -65,7 +65,7 @@
                         HVAC & Seats
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="weather.html">
                     <div id="menu_box_11">
                         Weather
                     </div>
