--- a/camera-logsMenu.html
+++ b/camera-logsMenu.html
@@ -39,7 +39,7 @@
                         Radio
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="cd.html">
                     <div id="menu_box_6">
                         CD
                     </div>
@@ -54,7 +54,7 @@
                         Traffic Alerts
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="newDriver.html">
                     <div id="menu_box_9">
                         New Driver
                     </div>
@@ -64,7 +64,7 @@
                         HVAC & Seats
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="weather.html">
                     <div id="menu_box_11">
                         Weather
                     </div>
