--- a/face-recognitionMenu.html
+++ b/face-recognitionMenu.html
@@ -41,7 +41,7 @@
                         Radio
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="cd.html">
                     <div id="menu_box_6">
                         CD
                     </div>
@@ -56,7 +56,7 @@
                         Traffic Alerts
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="newDriver.html">
                     <div id="menu_box_9">
                         New Driver
                     </div>
@@ -66,7 +66,7 @@
                         HVAC & Seats
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="weather.html">
                     <div id="menu_box_11">
                         Weather
                     </div>
